--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+      <!--
+      Realizado por Leon Santiago Urrego Atehortua`.
+    -->
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
